tests/snapshots/case__case__error_on_float_case_statement.snap
---
source: tests/case.rs
expression: result

---
Floating point values are not allowed in pattern matching.

error: 
  ┌─ sample:5:5
  │
5 │     1.1 -> "Hello"
  │     ^^^


